--- a/src/app.html
+++ b/src/app.html
@@ -21,6 +21,7 @@
 				overflow: hidden;
 			}
 		</style>
+		<link rel="icon" type="image/png" href="./favicon.png" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
