--- a/src/app.html
+++ b/src/app.html
@@ -21,7 +21,8 @@
 				overflow: hidden;
 			}
 		</style>
-		<link rel="icon" type="image/png" href="./favicon.png" />
+		<link rel="icon" type="image/png" href="./favicon.svg" />
+		<title>Baccarat Trend</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
